uptill footer part done

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </section>
 
-        <section class="container">
+        <section class="container section-two">
             <h2 class="primary-color sec2-header">Popular Collection</h2>
                 <div class="top-collections">
                     <div class="collection">
@@ -188,6 +188,50 @@
                             Buyers protection possible!</p>
                         </div>
                     </div>
+                </div>
+                <a href="">See More <i class="fas fa-arrow-right"></i></a>
+        </section>
+
+        <section class="container section-three">
+            <h1 class="primary-color section-title">Tre<span class="orangered-color">nd</span>ing Now <img class="trend-logo" src="./resources/logos/trending.png"></h1>
+                <div class="trending-sale">
+                    <div class="trending">
+                        <div class="trending-left">
+                            <h2 class="gray-color">Dji Mavic Pro</h2>
+                            <p class="dark-color"><i class="fas fa-dollar-sign"></i>1800.80</p>
+                            <div class="rating">
+                                <i class="fas fa-star orange-color"></i>
+                                <i class="fas fa-star orange-color"></i>
+                                <i class="fas fa-star orange-color"></i>
+                                <i class="fas fa-star orange-color"></i>
+                                <i class="fas fa-star orange-color"></i>
+                                <p class="rating-point">5</p>
+                                <p>Keeping holiday ahead, peoples are planning to 
+                                    have a tour with theirs' endearing GoPro camera.
+                                </p>
+                                <a class="link-button explore-button" href="">Explore More <img src="./resources/logos/internet-explorer.png" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="trending-right">
+                            <img src="./resources/images/drone.png" alt="">
+                        </div>
+                    </div>
+                    <!-- <div class="sale">
+                        <h1 class="primary-color">Trending Now</h1>
+                        <img src="./resources/images/drone.png" alt="">
+                        <h2 class="gray-color">Dji Mavic Pro</h2>
+                        <div class="rating">
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="fas fa-star orange-color"></i>
+                            <i class="fas fa-star orange-color"></i>
+                            <p class="rating-point">5</p>
+                            <p>Keeping holiday ahead, peoples are planning to 
+                                have a tour with theirs' endearing GoPro camera.
+                            </p>
+                        </div>
+                    </div> -->
                 </div>
         </section>
     </main>
