edited and footer left yet

--- a/index.html
+++ b/index.html
@@ -193,46 +193,50 @@
         </section>
 
         <section class="container section-three">
-            <h1 class="primary-color section-title">Tre<span class="orangered-color">nd</span>ing Now <img class="trend-logo" src="./resources/logos/trending.png"></h1>
-                <div class="trending-sale">
-                    <div class="trending">
-                        <div class="trending-left">
-                            <h2 class="gray-color">Dji Mavic Pro</h2>
-                            <p class="dark-color"><i class="fas fa-dollar-sign"></i>1800.80</p>
-                            <div class="rating">
-                                <i class="fas fa-star orange-color"></i>
-                                <i class="fas fa-star orange-color"></i>
-                                <i class="fas fa-star orange-color"></i>
-                                <i class="fas fa-star orange-color"></i>
-                                <i class="fas fa-star orange-color"></i>
-                                <p class="rating-point">5</p>
-                                <p>Keeping holiday ahead, peoples are planning to 
-                                    have a tour with theirs' endearing GoPro camera.
-                                </p>
-                                <a class="link-button explore-button" href="">Explore More <img src="./resources/logos/internet-explorer.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="trending-right">
-                            <img src="./resources/images/drone.png" alt="">
-                        </div>
+            <h1 class="primary-color section-title">Tre<span class="orangered-color">nd</span>ing Now <img  class="trend-logo" src="./resources/logos/trending.png"></h1>
+            <div class="trending">
+                <div class="trending-left">
+                    <h2 class="gray-color">Dji Mavic Pro</h2>
+                    <p class="dark-color"><i class="fas fa-dollar-sign"></i>1800.80</p>
+                    <div class="rating">
+                        <i class="fas fa-star orange-color"></i>
+                        <i class="fas fa-star orange-color"></i>
+                        <i class="fas fa-star orange-color"></i>
+                        <i class="fas fa-star orange-color"></i>
+                        <i class="fas fa-star orange-color"></i>
+                        <p class="rating-point">5</p>
+                        <p>Keeping holiday ahead, peoples are planning to 
+                            have a tour with theirs' endearing GoPro camera.</p>
+                        <a class="link-button explore-button" href="">Explore More <img src="./resources/logos/internet-explorer.png" alt=""></a>
                     </div>
-                    <!-- <div class="sale">
-                        <h1 class="primary-color">Trending Now</h1>
-                        <img src="./resources/images/drone.png" alt="">
-                        <h2 class="gray-color">Dji Mavic Pro</h2>
-                        <div class="rating">
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="fas fa-star orange-color"></i>
-                            <i class="fas fa-star orange-color"></i>
-                            <p class="rating-point">5</p>
-                            <p>Keeping holiday ahead, peoples are planning to 
-                                have a tour with theirs' endearing GoPro camera.
-                            </p>
-                        </div>
-                    </div> -->
                 </div>
+                    <div class="trending-right">
+                        <img src="./resources/images/drone.png" alt="">
+                    </div>
+            </div>
+             <h1 class="primary-color section-title">On <span class="orangered-color">Sale</span> <img  class="trend-logo" src="./resources/logos/discount.png"></h1>       
+            <div id="sale" class="sale trending">
+                <div class="sale-left">
+                    <img src="./resources/images/action.png" alt="">
+                </div>
+                <div class="sale-right trending-left">
+                    <h2 class="gray-color">GoPro HERO9 Black</h2>
+                    
+                    <p class="dark-color">Now $190 <sub><small>was <s>$380</s></small></sub> </p>
+                    <div class="rating">
+                        <i class="fas fa-star orange-color"></i>
+                        <i class="fas fa-star orange-color"></i>
+                        <i class="fas fa-star orange-color"></i>
+                        <i class="fas fa-star orange-color"></i>
+                        <i class="fas fa-star orange-color"></i>
+                        <p class="rating-point">5</p>
+                        <p>Keeping holiday ahead, peoples are planning to 
+                            have a tour with theirs' endearing GoPro camera.</p>
+                        <a class="link-button explore-button" href="">Buy Now <img src="./resources/logos/cart.svg" alt=""></a>
+                    </div>
+                </div>
+                
+            </div>       
         </section>
     </main>
 </body>
