688px respinsive finished

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <section class="container">
+        <section class="container section-one">
             <div class="top-section">
                 <div class="welcome-text">
                     <h1 class="primary-color">Start your Journey as Influencer</h1>
@@ -210,9 +210,9 @@
                         <a class="link-button explore-button" href="">Explore More <img src="./resources/logos/internet-explorer.png" alt=""></a>
                     </div>
                 </div>
-                    <div class="trending-right">
-                        <img src="./resources/images/drone.png" alt="">
-                    </div>
+                <div class="trending-right">
+                    <img src="./resources/images/drone.png" alt="">
+                </div>
             </div>
              <h1 class="primary-color section-title">On <span class="orangered-color">Sale</span> <img  class="trend-logo" src="./resources/logos/discount.png"></h1>       
             <div id="sale" class="sale trending">
@@ -221,7 +221,6 @@
                 </div>
                 <div class="sale-right trending-left">
                     <h2 class="gray-color">GoPro HERO9 Black</h2>
-                    
                     <p class="dark-color">Now $190 <sub><small>was <s>$380</s></small></sub> </p>
                     <div class="rating">
                         <i class="fas fa-star orange-color"></i>
@@ -239,5 +238,17 @@
             </div>       
         </section>
     </main>
+
+    <footer>
+        <div class="copyright">
+            <h2>Influencer Gadgets</h2>
+            <p>Copyright &copy; 2022 Influencer Gadgets</p>
+            <p>All rights reserved</p>
+            <a href="https://www.instagram.com/forhad_63"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/forhadu2"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a
+            ><a href="#"><i class="fab fa-youtube"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
