--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <li><a href="" class="primary-color">Products</a></li>
                 <li><a href="" class="primary-color">Sign up</a></li>
                 <li><a href="" class="primary-color">Log In</a></li>
-                <li><i class="fas fa-search primary-color"></i></li>
-                <li><i class="fas fa-shopping-cart primary-color"></i></li>
+                <li><a href=""><i class="fas fa-search primary-color"></i></a></li>
+                <li><a href=""><i class="fas fa-shopping-cart primary-color"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -64,7 +64,7 @@
                             <i class="fas fa-star orange-color"></i>
                             <i class="fas fa-star-half-alt orange-color"></i>
                             <p class="rating-point">4.99</p>
-                            <p>Wordwide shifting available
+                            <p>Worldwide shifting available
                             Buyers protection possible!</p>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                             <i class="fas fa-star orange-color"></i>
                             <i class="fas fa-star-half-alt orange-color"></i>
                             <p class="rating-point">4.99</p>
-                            <p>Wordwide shifting available
+                            <p>Worldwide shifting available
                             Buyers protection possible!</p>
                         </div>
                     </div>
@@ -94,7 +94,7 @@
                             <i class="fas fa-star orange-color"></i>
                             <i class="fas fa-star-half-alt orange-color"></i>
                             <p class="rating-point">4.99</p>
-                            <p>Wordwide shifting available
+                            <p>Worldwide shifting available
                             Buyers protection possible!</p>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                             <i class="fas fa-star orange-color"></i>
                             <i class="fas fa-star-half-alt orange-color"></i>
                             <p class="rating-point">4.99</p>
-                            <p>Wordwide shifting available
+                            <p>Worldwide shifting available
                             Buyers protection possible!</p>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                             <i class="fas fa-star orange-color"></i>
                             <i class="fas fa-star-half-alt orange-color"></i>
                             <p class="rating-point">4.99</p>
-                            <p>Wordwide shifting available
+                            <p>Worldwide shifting available
                             Buyers protection possible!</p>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                             <i class="fas fa-star orange-color"></i>
                             <i class="fas fa-star-half-alt orange-color"></i>
                             <p class="rating-point">4.99</p>
-                            <p>Wordwide shifting available
+                            <p>Worldwide shifting available
                             Buyers protection possible!</p>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
                             <i class="fas fa-star orange-color"></i>
                             <i class="fas fa-star-half-alt orange-color"></i>
                             <p class="rating-point">4.99</p>
-                            <p>Wordwide shifting available
+                            <p>Worldwide shifting available
                             Buyers protection possible!</p>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                             <i class="fas fa-star orange-color"></i>
                             <i class="fas fa-star-half-alt orange-color"></i>
                             <p class="rating-point">4.99</p>
-                            <p>Wordwide shifting available
+                            <p>Worldwide shifting available
                             Buyers protection possible!</p>
                         </div>
                     </div>
@@ -184,7 +184,7 @@
                             <i class="fas fa-star orange-color"></i>
                             <i class="fas fa-star-half-alt orange-color"></i>
                             <p class="rating-point">4.99</p>
-                            <p>Wordwide shifting available
+                            <p>Worldwide shifting available
                             Buyers protection possible!</p>
                         </div>
                     </div>
